<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="5dp"
        app:contentPadding="10dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_layout_staff_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_editstaff_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/staff_item_name"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="5dp"
        app:contentPadding="10dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_layout_staff_job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_editstaff_work_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/staff_item_job"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:contentPadding="10dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_layout_staff_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_editstaff_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:hint="@string/staff_item_age"
                android:inputType="numberSigned" />

        </android.support.design.widget.TextInputLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/btn_add_new_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/rouds_shape_btn"
        android:text="@string/btn_send"
        android:textColor="@color/white" />
</LinearLayout>