<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="5dp">

        <Spinner
            android:id="@+id/sp_edit_status_table_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="5dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtLayout_edit_num_table_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_edit_num_table_table_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:hint="@string/table_item_number_hint"
                android:inputType="numberSigned" />

        </android.support.design.widget.TextInputLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="5dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout_edit_num_seats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_edit_num_seats_table_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:hint="@string/table_item_number_of_seats_hint"
                android:inputType="numberSigned" />

        </android.support.design.widget.TextInputLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/btn_edit_send_table_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rouds_shape_btn"
        android:text="@string/btn_send"
        android:textColor="@color/white" />

</LinearLayout>