<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="@dimen/textview_margin_16"
        android:layout_marginRight="@dimen/textview_margin_16"
        app:cardCornerRadius="5dp"
        app:contentPadding="10dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_account_circle" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/textview_margin_16"
        android:layout_marginRight="@dimen/textview_margin_16"
        app:cardCornerRadius="5dp"
        app:contentPadding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:text="@string/staff_item_name"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/view_staff_item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Андрей Пупкин" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="49dp"
                    android:text="@string/staff_item_job"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/view_staff_item_job"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Повар" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="72dp"
                    android:text="@string/staff_item_age"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/view_staff_item_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="26" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>